syntax='proto3';
package com.example.grpc;

message whoIsMaster {
  string message = 1;
  int64 idDrone = 2;
  string ipAddress = 3;
  int64 portNumber = 4;
}

message responseWhoIsMaster {
  string responseIdMaster = 1;
}


service findIdMaster {
  rpc MessageHowIsMaster(whoIsMaster) returns (responseWhoIsMaster);
}
